# logging-py

./: .gitignore  README.md  celery.sh  pyproject.toml
barnlog/: celery.py  django.py  logging.py  requests.py  user.py  utils.py
requirements/: dev.txt
tests/: test_logger.py  test_worker.py
tests/stable/: celery.py  settings.py  urls.py
tests/stable/stall/: tasks.py  views.py
